# mmtk-core

./: .gitignore  .gitlab-ci.yml  404.html  API-MIGRATION.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  FAKE  FAKEPR  LICENSE-APACHE  README.md  Tutorial.md  bench.sh  build.py  build.rs  build.sh  glossary.html  index.html  output.txt  output1.txt  output2.txt  perfevent.cpp  perfmon.cpp  print.html  rust-toolchain  searchindex.js  searchindex.json  toc.html  toc.js
.github/: protected-workflows.yml
.github/ISSUE_TEMPLATE/: mmtk-enhancememnt-proposal--mep-.md
.github/scripts/: check-lineends.py  check-lineends.sh  ci-build.sh  ci-check-lineends.sh  ci-common.sh  ci-doc.sh  ci-replace-mmtk-dep.sh  ci-setup-aarch64-apple-darwin.sh  ci-setup-i686-unknown-linux-gnu.sh  ci-setup-x86_64-unknown-linux-gnu.sh  ci-setup.sh  ci-style.sh  ci-test.sh  replace-mmtk-dep.py
.github/workflows/: api-check.yml  auto-label-new-issues.yml  auto-merge-inner.yml  auto-merge.yml  binding-tests-extended.yml  binding-tests-openjdk.yml  cargo-msrv.yml  cargo-publish.yml  extended-tests-bindings.yml  link-check.yml  merge-check.yml  micro-bm.yml  minimal-tests-bindings.yml  minimal-tests-core.yml  mmtk-dev-env.yml  obsolete_stress-ci.yml  perf-baseline.yml  perf-compare-ci.yml  perf-jikesrvm-baseline.yml  perf-openjdk-baseline.yml  perf-regression-ci-weekly.yml  perf-regression-ci.yml  post-review-ci.yml  pr-binding-refs.yml  pre-review-ci.yml  rustdoc.yml  stress-ci.yml  sync-github-labels.yml  test-protection.yml  test.yml
568e59e043f9278b99580771f5e192291c38f205/: all.html  enum.Allocator.html  index.html  struct.Mutator.html  trait.CopyContext.html  trait.MutatorContext.html  trait.TraceLocal.html
568e59e043f9278b99580771f5e192291c38f205/memory_manager/: fn.add_phantom_candidate.html  fn.add_soft_candidate.html  fn.add_weak_candidate.html  fn.bind_mutator.html  fn.handle_user_collection_request.html  fn.harness_begin.html  fn.is_live_object.html  fn.is_mapped_address.html  fn.process.html  fn.start_control_collector.html  fn.start_worker.html  fn.starting_heap_address.html  fn.used_bytes.html  sidebar-items.js
568e59e043f9278b99580771f5e192291c38f205/policy/: index.html  sidebar-items.js
568e59e043f9278b99580771f5e192291c38f205/scheduler/: enum.CoordinatorMessage.html  trait.Context.html  trait.GCWork.html  trait.Work.html
568e59e043f9278b99580771f5e192291c38f205/util/: index.html  struct.SynchronizedCounter.html
568e59e043f9278b99580771f5e192291c38f205/vm/: trait.ActivePlan.html  trait.Collection.html  trait.ObjectModel.html  trait.ReferenceGlue.html
abseil-cpp-20200923.2/: bazel-abseil-cpp-20200923.2  bazel-bin  bazel-out  bazel-testlogs
api/: bench.c  crates.js  help.html  main.c  mmtk.h  search-index.js  settings.html  source-files.js  src-files.js
api/mmtk/: all.html  enum.AllocationSemantics.html  enum.BarrierSelector.html  index.html  macro.mmap_anno_test.html  sidebar-items.js  struct.LiveBytesStats.html  struct.MMTK.html  struct.MMTKBuilder.html  trait.MutatorContext.html  trait.ObjectQueue.html  trait.Plan.html  trait.PolicyCopyContext.html
bench/: bench.c  bump_allocator.c
benches/: alloc.rs  main.rs  sft.rs
benches/bulk_meta/: bscan.rs  (+3 more)
docs/: CNAME  Tutorial.md  all.html  index.html  search-index.js  settings.html  source-files.js  struct.MMTK.html  trait.TransitiveClosure.html
docs/dummyvm/: Cargo.toml  README.md
docs/dummyvm/include/: mmtk.h
docs/dummyvm/src/: active_plan.rs  api.rs  collection.rs  lib.rs  object_model.rs  reference_glue.rs  scanning.rs  slots.rs
examples/: allocation_benchmark.c  bench.sh  build.py  gcbench.rs  main.c  mmtk.h  reference_bump_allocator.c
macros/: Cargo.toml
macros/src/: has_spaces_impl.rs  lib.rs  plan_trace_object_impl.rs  util.rs
macros/trace_object/: Cargo.toml
macros/trace_object/src/: derive_impl.rs  lib.rs  util.rs
migration/: prefix.html
misc/: contributors.html
portingguide/: before_start.html  portability.html  prefix.html
src/: address.rs  args.rs  build_info.rs  global_state.rs  heap_space.rs  lib.rs  memory_manager.rs  mmtk.rs  rust_mem_counter.rs  util.rs
tests/: scheduler.rs  test_address.rs  test_roots_work_factory.rs
tools/: README.md  run.py  verify_oom_stack.py
tutorial/: further_reading.html  prefix.html
vmbindings/dummyvm/: Cargo.toml
vmbindings/dummyvm/api/: mmtk.h
vmbindings/dummyvm/benches/: bench_alloc.rs  bench_main.rs  bench_post_alloc.rs  bench_sft.rs  main.rs  sft.rs
vmbindings/dummyvm/src/: active_plan.rs  api.rs  collection.rs  edges.rs  fixed-life.rs  gcbench.rs  lib.rs  object_model.rs  reference_glue.rs  scanning.rs  test_fixtures.rs
vmbindings/dummyvm/src/tests/: allcoate_with_disable_collection.rs  allocate_align_offset.rs  allocate_with_disable_collection.rs  allocate_with_enable_collection.rs  allocate_with_initialize_collection.rs  allocate_with_re_enable_collection.rs  allocate_without_enable_collection.rs  allocate_without_initialize_collection.rs  allocator_info.rs  barrier_slow_path_assertion.rs  conservatism.rs  doc_avoid_resolving_allocator.rs  doc_mutator_storage.rs  edges_test.rs  fixed_live.rs  gcbench.rs  handle_mmap_conflict.rs  handle_mmap_oom.rs  is_in_mmtk_spaces.rs  issue139.rs  issue139_allocate_unaligned_object_size.rs  issue867_allocate_unrealistically_large_object.rs  malloc.rs  malloc_api.rs  malloc_counted.rs  malloc_ms.rs  malloc_space.rs  mod.rs  nogc_lock_free.rs  vm_layout_compressed_pointer_64.rs  vm_layout_default.rs  vm_layout_heap_start.rs  vm_layout_log_address_space.rs
vmbindings/dummyvm/src/tests/fixtures/: mod.rs
vmbindings/jikesrvm/: Cargo.toml
vmbindings/jikesrvm/api/: mmtk.h
vmbindings/jikesrvm/src/: active_plan.rs  api.rs  boot_image_size.rs  class_loader_constants.rs  collection.rs  entrypoint.rs  heap_layout_constants.rs  java_header.rs  java_header_constants.rs  java_size_constants.rs  jtoc_call.rs  lib.rs  memory_manager_constants.rs  misc_header_constants.rs  object_model.rs  reference_glue.rs  scan_boot_image.rs  scan_sanity.rs  scan_statics.rs  scanning.rs  tib_layout_constants.rs
(+15142 files in other folders)
