[package]
name = "mmtk-macros"
# the macro crate uses the same version as mmtk-core
version = "0.22.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MMTk macros provides procedural macros used by mmtk-core."
homepage = "https://www.mmtk.io"
repository = "https://github.com/mmtk/mmtk-core/tree/master/macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.37"
syn = { version = "2.0.29", features = ["extra-traits"] }
quote = "1.0.18"
proc-macro-error = "1.0.4"
