[package]
name = "mmtk_dummyvm"
version = "0.0.1"
authors = [" <>"]
edition = "2021"

[lib]
name = "mmtk_dummyvm"
# be careful - LTO is only allowed for certain crate types
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
mmtk = { path = "../../", version = "*" }
libc = "0.2"
lazy_static = "1.1"
atomic_refcell = "0.1.7"

[features]
default = []
is_mmtk_object = ["mmtk/is_mmtk_object"]
